# data_eng_etl_electricity_meteo

./: .env.example  .env.local.example  .gitignore  README.md  TODO.md  TODO_donnees_meteo.md  airflow.Dockerfile  docker-compose.yaml  prek.toml  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/review_code/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: catalog.yaml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql  test_unique_combination.sql
dbt/models/gold/: _gold.yml  installations_renouvelables_avec_stations_meteo.sql
dbt/models/silver/: _silver.yml  _sources.yml  stg_dim_contours_iris.sql  stg_dim_installations.sql  stg_dim_stations_meteo.sql
docs/: airflow_structlog_custom_processors.md  architecture_etl_elt.md  choix_technique_chargement_postgres.md  choix_technique_duckdb_spatial.md  choix_visualisation_donnees.md  data_quality.md  data_quality_strategy.md  data_sources.md  dataframe_model_custom.md  dbt_snapshots_historisation_dimensions.md  delta_incremental_silver.md  implementation_dbt_airflow.md  integration_meteo_france.md  oom_unique_silver.md  rapport_datasets_production_par_groupe_et_metropoles.md  simplification_cli_et_pythonpath.md
notebooks/: 01_ign_contours_iris.py  02_meteo_france_stations.py  03_meteo_france_observations.py  04_meteo_france_climatologie.py  05_odre_installations.py  06_odre_eco2mix_cons_def.py  07_odre_eco2mix_tr.py
postgres/init/: 01_create_database.sh  02_create_schemas.sh
postgres/sql/: ign_contours_iris.sql  meteo_france_stations.sql  odre_eco2mix_cons_def.sql  odre_eco2mix_tr.sql  odre_installations.sql
postgres/tables/: ign_contours_iris.sql  meteo_france_climatologie.sql  meteo_france_stations.sql  odre_eco2mix_cons_def.sql  odre_eco2mix_tr.sql  odre_installations.sql
postgres/upsert/: meteo_france_climatologie.sql  odre_eco2mix_tr.sql
scripts/: dbt.sh  demo_meteo_failures.py  format_docstrings.py  sync_dep_floors.py  validate_silver_on_existing_bronze.py
scripts/benchmarks/: bench_postgres_load.py  bench_tunable_parameters.py
src/data_eng_etl_electricity_meteo/: __init__.py  data_catalog.py  file_manager.py  main.py  main_meteo_climatologie.py  main_remote_dataset.py  main_structlog.py  path_resolver.py  test_exception_logs.py
src/data_eng_etl_electricity_meteo/airflow/: __init__.py  assets.py  defaults.py
src/data_eng_etl_electricity_meteo/airflow/dags/: __init__.py  dbt_gold_dag.py  derived_dataset_factory.py  ingest_factory.py  landing_to_silver_factory.py  load_pg_factory.py  remote_dataset_factory.py  smoke_test_structlog.py  to_gold_factory.py  to_silver_factory.py  to_silver_pg_factory.py
src/data_eng_etl_electricity_meteo/cli/: __init__.py  pipeline_runner.py  run_dbt.py  run_meteo_climatologie.py  run_pipeline.py  run_pipeline_meteo_france_climatologie.py  runner.py
src/data_eng_etl_electricity_meteo/core/: __init__.py  data_catalog.py  enums.py  exceptions.py  layers.py  logger.py  pydantic_base.py  settings.py
src/data_eng_etl_electricity_meteo/custom_downloads/: __init__.py  meteo_climatologie.py  registry.py
src/data_eng_etl_electricity_meteo/custom_metadata/: __init__.py  datagouv.py  opendatasoft.py  registry.py
src/data_eng_etl_electricity_meteo/loaders/: __init__.py  pg_connection.py  pg_loader.py  postgres.py
src/data_eng_etl_electricity_meteo/pipeline/: __init__.py  custom_downloads.py  file_manager.py  path_resolver.py  progress.py  remote_dataset_manager.py  remote_ingestion.py  stage_types.py  state.py  strategies.py  types.py
src/data_eng_etl_electricity_meteo/transformations/: __init__.py  dataframe_model.py  ign_contours_iris.py  meteo_france_climatologie.py  meteo_france_stations.py  odre_eco2mix_cons_def.py  odre_eco2mix_tr.py  odre_installations.py  registry.py  shared.py  spec.py
src/data_eng_etl_electricity_meteo/transformations/datasets/: __init__.py  ign_contours_iris.py  meteo_france_climatologie.py  meteo_france_stations.py  odre_eco2mix_common.py  odre_eco2mix_cons_def.py  odre_eco2mix_tr.py  odre_installations.py
src/data_eng_etl_electricity_meteo/utils/: __init__.py  download.py  extract_archive.py  extraction.py  file_hash.py  meteo_download.py  polars.py  progress.py  pydantic_utils.py  remote_metadata.py
tests/: test_catalog_registry_consistency.py  test_climatologie_columns_consistency.py  test_dbt_consistency.py  test_exception_logs.py
tests/core/: test_data_catalog.py  test_exceptions.py  test_logger.py
tests/fixtures/: data_catalog_sample.yaml
tests/loaders/: test_pg_loader.py
tests/transformations/: test_dataframe_model.py  test_meteo_france_climatologie.py  test_shared.py  test_source_drift.py  test_spec.py
tests/utils/: test_download.py  test_extraction.py  test_file_hash.py  test_progress.py  test_remote_metadata.py
