[project]
name = "data-eng-etl-electricity-meteo"
version = "2026.02.10"
description = "Projet personnel d'ingénierie des données (data engineering)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "httpx[http2]>=0.28.1",
    "orjson>=3.11.7",
    "polars>=1.38.1",
    "psycopg[c]>=3.3.2",
    "py7zr>=1.1.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "apache-airflow-task-sdk>=1.1.7",
    "marimo>=0.19.11",
    "prek>=0.3.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]


[tool.ruff]
line-length = 100
include = ["src/**/*.py", "tests/**/*.py"]
#src = ["src", "test"]
extend-exclude = ["notebooks"]

#[tool.ruff.format]
#docstring-code-line-length = 80

[tool.ruff.lint]
select = [
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "PL",  # pylint
    "D",   # pydocstyle (docstrings)
    "NPY", # numpy-specific
    "UP",  # pyupgrade
    "TC",  # flake8-type-checking
]

# "D105", # Missing docstring in magic method (__post_init__, etc.)
# "D107", # Missing docstring in __init__ (class docstring suffices)
ignore = []
#fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
#convention = "google"
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ty.src]
include = ["src", "tests"]
#exclude = ["notebooks"]

[tool.pytest.ini_options]
addopts = "--cov=data_eng_etl_electricity_meteo --cov-report=term-missing --cov-report=html:tests/htmlcov"
pythonpath = ["src"]
#testpaths = ["tests"]

[tool.coverage.run]
branch = true                 # check if all branches of if/else statement are used
data_file = "tests/.coverage"
#source = ["data_eng_etl_electricity_meteo"]

[tool.coverage.report]
#fail_under = 90
show_missing = true
skip_empty = true
exclude_also = ['if __name__ == .__main__.:']

[tool.marimo.runtime]
pythonpath = ["src"] # required to use absolute imports inside notebooks
