[project]
name = "data-eng-etl-electricity-meteo"
version = "2026.02.10"
description = "Projet personnel d'ingénierie des données (data engineering)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11.7",
    "dbt-postgres>=1.10.0",
    "duckdb>=1.5.0",
    "httpx[http2]>=0.28.1",
    "orjson>=3.11.7",
    "polars>=1.38.1",
    "psycopg[c]>=3.3.3",
    "py7zr>=1.1.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "apache-airflow-providers-postgres>=6.6.0",
    "apache-airflow-task-sdk>=1.1.7",
    "marimo>=0.20.4",
    "pip-audit>=2.10.0",
    "prek>=0.3.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]


[tool.ruff]
line-length = 100
include = ["notebooks/**/*.py", "scripts/**/*.py", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations
    "I", # isort
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "PL", # pylint
    "D", # pydocstyle (docstrings)
    "NPY", # numpy-specific
    "UP", # pyupgrade
    "TC", # flake8-type-checking
]
ignore = [
    "ANN401", # Allow `Any` (pydantic validators, protocols, **kwargs)
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/**/*.py" = ["D1", "PLR2004"]
"notebooks/**/*.py" = [
    "D100", # Module docstring (generated by marimo)
    "D103", # Function docstring (cells, not real functions)
    "PLC0415", # Import inside function (marimo cell pattern)
    "PLR1711", # Useless return (marimo cell convention)
    "I001", # Import sort (marimo manages per-cell imports)
    "F841", # Unused variable (marimo reactive graph)
    "TC001", # Move import into TYPE_CHECKING (not applicable in notebooks)
    "TC003", # Move import into TYPE_CHECKING (not applicable in notebooks)
    "PLR0913", # Too many arguments (marimo cells depend on many reactive vars)
    "ANN001", # Argument annotations (marimo reactive dependencies, not real args)
    "ANN202", # Private function return type (cells are all `def _()`)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ty.src]
include = ["notebooks", "scripts", "src", "tests"]

[tool.pytest.ini_options]
addopts = "--cov=data_eng_etl_electricity_meteo --cov-report=term-missing --cov-report=html:tests/htmlcov"
pythonpath = ["src"]

[tool.coverage.run]
branch = true # check if all branches of if/else statement are used
data_file = "tests/.coverage"

[tool.coverage.report]
#fail_under = 90
show_missing = true
skip_empty = true
exclude_also = ['if __name__ == .__main__.:']

[tool.marimo.runtime]
pythonpath = ["src"] # required to use absolute imports inside notebooks
