[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-eng-etl-electricity-meteo"
version = "2026.04.23"
description = "Projet personnel d'ingénierie des données (data engineering)."
readme = "README.md"
# TODO: bump to ">=3.14" when dbt-core relaxes its `mashumaro<3.15` constraint.
#  mashumaro <3.15 breaks at import on Python 3.14 (UnserializableField on
#  JSONObjectSchema.schema: Optional[str]). dbt-core 1.11.11 classifiers list only
#  Python 3.10-3.13. Revisit on each `uv sync --upgrade` cycle.
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11.11",
    "dbt-postgres>=1.10.0",
    "duckdb>=1.5.3",
    "httpx[http2]>=0.28.1",
    "orjson>=3.11.9",
    "polars>=1.41.2",
    "psycopg[c]>=3.3.4",
    "py7zr>=1.1.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "structlog>=26.1.0",
    "tqdm>=4.68.2",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "apache-airflow-task-sdk>=1.2.2",
    "marimo>=0.23.9",
    "packaging>=26.2", # used by scripts/sync_dep_floors.py
    "pip-audit>=2.10.1",
    "prek>=0.4.4",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[project.scripts]
pipeline = "data_eng_etl_electricity_meteo.cli.run_pipeline:app"
pipeline-meteo-clim = "data_eng_etl_electricity_meteo.cli.run_pipeline_meteo_france_climatologie:app"
run-dbt = "data_eng_etl_electricity_meteo.cli.run_dbt:app"

[tool.ruff]
line-length = 100
# Explicit target-version aligned on requires-python. Kept explicit so that a
# future bump of requires-python doesn't silently activate 3.14-only style rules
# (PEP 758 unparenthesized except, PEP 649 quoted-annotation removal) before
# we're ready to adopt the new syntax.
target-version = "py313"
include = ["notebooks/**/*.py", "scripts/**/*.py", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations
    "B", # flake8-bugbear (mutable defaults, unused loop vars, …)
    "C4", # flake8-comprehensions (unnecessary list/dict/set constructions)
    "D", # pydocstyle
    "DTZ", # flake8-datetimez (timezone-aware datetimes)
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "LOG", # flake8-logging (logging antipatterns)
    "NPY", # numpy-specific
    "PERF", # Perflint (performance antipatterns)
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib (Path over os.path)
    "RUF", # ruff-specific curated rules
    "SIM", # flake8-simplify (safe refactors)
    "TC", # flake8-type-checking
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]
ignore = [
    "ANN401", # Allow `Any` (pydantic validators, protocols, **kwargs)
    # TC001/002/003 (auto-move imports into TYPE_CHECKING) conflict with base
    # classes that call get_type_hints() at class creation time
    # (DataFrameModel, StrictModel / pydantic.BaseModel, pydantic_settings).
    # Those imports need to stay at module level. Other TC rules (TC004-TC010)
    # are kept — they fix legitimate issues without moving imports.
    "TC001",
    "TC002",
    "TC003",
    # Typographic unicode (en dash "–", accented French chars) is legitimate
    # in docstrings, log messages, and comments; we prefer readability over
    # ASCII-only strictness.
    "RUF001",
    "RUF003",
    # `# fmt: on` between decorator and def is technically "redundant" to ruff
    # (the # fmt: off above already scopes to the whole statement unit), but we
    # keep the explicit pair for readability — it visually marks where the
    # manually-aligned block ends.
    "RUF028",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/**/*.py" = [
    "D1", # Missing docstrings (test names are self-documenting)
    "PLR2004", # Magic values (common and readable in test assertions)
    "PT006", # Parametrize names as string "a, b" — project style, tuple form not required
]
"notebooks/**/*.py" = [
    "D100", # Module docstring (generated by marimo)
    "D103", # Function docstring (cells, not real functions)
    "PLC0415", # Import inside function (marimo cell pattern)
    "PLR1711", # Useless return (marimo cell convention)
    "I001", # Import sort (marimo manages per-cell imports)
    "F841", # Unused variable (marimo reactive graph)
    "B018", # Useless expression (marimo displays last cell expression as output)
    "PLR0913", # Too many arguments (marimo cells depend on many reactive vars)
    "ANN001", # Argument annotations (marimo reactive dependencies, not real args)
    "ANN202", # Private function return type (cells are all `def _()`)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ty.src]
include = ["notebooks", "scripts", "src", "tests"]

[tool.pytest.ini_options]
# skip-covered keeps the terminal report short (only files with missing lines).
# HTML report is not a default — generate on demand with `--cov-report=html`.
addopts = "--cov=data_eng_etl_electricity_meteo --cov-report=term-missing:skip-covered"

[tool.coverage.run]
branch = true # check if all branches of if/else statement are used
data_file = "tests/.coverage"

[tool.coverage.report]
#fail_under = 90
show_missing = true
skip_empty = true
exclude_also = ['if __name__ == .__main__.:']

[tool.hatch.build.targets.wheel]
packages = ["src/data_eng_etl_electricity_meteo"]

[tool.marimo.runtime]
